Fixed white space issue

--- a/css/top-section.css
+++ b/css/top-section.css
@@ -10,7 +10,7 @@
 	background-size: cover;
 	background-repeat: no-repeat;
 	text-align: center;
-	height: 100vh;
+	height: 101vh;
 	vertical-align: middle;
 	/*min-height: */
 }
